# SocialMediaDownloadMaubot

./: .gitignore  README.md  base-config.yaml  maubot.yaml  pyproject.toml  redditpreview.py  socialmediadownload.py
.github/workflows/: release-maubot-plugin.yml
instaloader/: instaloader.py  instaloadercontext.py  structures.py
